Refactor support and resistance calculator into defined 3-step pipeline (#188)
* Refactor support and resistance calculator into defined 3-step pipeline

* Remove bars parameter from saveSupportResistances

* Inline proven bucket calculation into computeSupportResistances

* Move LevelType enum to calculators.enums package